# RyuDB

./: .dockerignore  .gitcommit.txt  .gitignore  ARCHITECTURE.md  BENCHMARK.md  Install RyuDB Server.txt  QueryTEST_txt.txt  README.md  RyuDB_Architecture.txt  Step by Step - Run Help  TargetGUI.txt  UI_Design Idea .txt  back end idea.txt  duckdb_RyuDB_Com1.txt  duckdb_ryudb.txt  pyproject.toml  resume.txt  setup Server adn UI.txt
bench/: run_bench.py
docker/: Dockerfile  entrypoint.sh  env.yml  smoke.sh
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  monaco.ts  styles.css
frontend/src/components/: AskModal.tsx  Catalog.tsx  Chart.tsx  ChartSvg.tsx  ChartView.tsx  CommandPalette.tsx  DashboardModal.tsx  Dashboards.tsx  DiffModal.tsx  Editor.tsx  Explain.tsx  History.tsx  LoadDataModal.tsx  NotebookModal.tsx  Notebooks.tsx  PinWidgetModal.tsx  PlanGraph.tsx  Results.tsx  (+7 more)
frontend/test/: autocomplete_check.mjs  chartRender_check.mjs  csv_check.mjs  diff_check.mjs  nlSql_check.mjs  planLayout_check.mjs  smoke.mjs  worksheetTransfer_check.mjs
ryudb/: __init__.py  catalog.py  cli.py  delta.py  storage.py  transaction.py  wal.py
ryudb/exec/: __init__.py  executor.py  fused.py  ops.py
ryudb/kernels/: __init__.py  build.py  fused.cu  pqpages.cpp  pqpages.h
ryudb/server/: PROTOCOL.md  __init__.py  __main__.py  app.py  errors.py  explain.py  handlers.py  pgwire.py  protocol.py  worker.py
ryudb/sql/: __init__.py  optimize.py  parse.py  plan.py
tests/: conftest.py  test_agg_filter.py  test_cache_invalidation.py  test_catalog.py  test_checkpoint.py  test_correlated_composite.py  test_ctes.py  test_datetime.py  test_delete.py  test_delta.py  test_derived_tables.py  test_distinct_agg.py  test_distinct_having.py  test_executor.py  test_functions.py  test_fused.py  test_fused_scan_agg.py  test_grouping_sets.py  test_hash_agg_multi.py  test_insert.py  test_insert_select.py  test_join_hash_agg.py  test_joins.py  test_kernels.py  test_logical_agg.py  test_math_fns.py  test_merge.py  test_misc_expr.py  test_null_group_keys.py  test_optimize.py  test_orderby_expr.py  test_packaging.py  test_parquet_decode.py  test_parse.py  test_pgwire.py  test_predicates.py  test_scan_cache_populate.py  test_self_join.py  test_server.py  test_setops.py  (+8 more)
(+15 files in other folders)
