[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ryudb"
version = "0.1.0"
description = "RyuDB — a GPU-powered HTAP RDBMS (cuDF execution engine)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "RyuDB" }]
dependencies = [
    "cudf>=26.06",
    "sqlglot>=23",
    "pyarrow>=14",
    "websockets>=13",
    # pybind11 is needed to build the C++/CUDA fused kernel
    # (``ryudb build`` / ``python -m ryudb.kernels.build``); it is a build-time
    # dep, declared here so ``pip install ryudb`` + ``ryudb build`` works without
    # an extra install step. The kernel is optional — if it is not built, the
    # executor falls back to the Numba/cuDF paths.
    "pybind11>=2.13",
]

[project.optional-dependencies]
bench = ["duckdb>=1.1", "pandas>=2"]
dev = ["pytest>=8", "ruff>=0.5"]

[project.scripts]
ryudb = "ryudb.cli:main"
ryudb-server = "ryudb.server.__main__:main"

[tool.setuptools.packages.find]
include = ["ryudb*"]

# Ship the C++/CUDA kernel sources so ``python -m ryudb.kernels.build`` (and
# ``ryudb build``) work from an installed (non-editable) wheel, not just a
# source checkout. The built ``fused.so`` is platform/CUDA-specific and is NOT
# shipped — it is built on demand in the user's CUDA env (see ryudb/kernels/build.py).
[tool.setuptools.package-data]
"ryudb.kernels" = ["*.cu", "*.cpp", "*.h"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"